# Generated by Django 5.0.1 on 2026-02-02 13:22

import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('email', models.EmailField(max_length=254, unique=True, verbose_name='Email address')),
                ('name', models.CharField(blank=True, max_length=255, verbose_name='Display name')),
                ('profile_image', models.URLField(blank=True, verbose_name='Profile image URL')),
                ('email_verified', models.BooleanField(default=False, verbose_name='Email verified')),
                ('oauth_provider', models.CharField(blank=True, help_text='Primary provider: google, email, etc.', max_length=50, verbose_name='Primary OAuth provider')),
                ('oauth_id', models.CharField(blank=True, max_length=255, null=True, unique=True, verbose_name='Primary OAuth provider user ID')),
                ('oauth_providers', models.JSONField(blank=True, default=dict, help_text='Use UserOAuthProvider model instead', verbose_name='All OAuth providers (deprecated)')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Created at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'User',
                'verbose_name_plural': 'Users',
                'db_table': 'users',
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='UserOAuthProvider',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('provider', models.CharField(help_text='google, email, etc.', max_length=50, verbose_name='OAuth provider')),
                ('oauth_id', models.CharField(help_text='Firebase UID for this provider', max_length=255, verbose_name='OAuth provider user ID')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Linked at')),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Updated at')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='oauth_provider_links', to=settings.AUTH_USER_MODEL, verbose_name='User')),
            ],
            options={
                'verbose_name': 'User OAuth Provider',
                'verbose_name_plural': 'User OAuth Providers',
                'db_table': 'user_oauth_providers',
            },
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['email'], name='users_email_4b85f2_idx'),
        ),
        migrations.AddIndex(
            model_name='user',
            index=models.Index(fields=['oauth_provider', 'oauth_id'], name='users_oauth_p_c54165_idx'),
        ),
        migrations.AddIndex(
            model_name='useroauthprovider',
            index=models.Index(fields=['user', 'provider'], name='user_oauth__user_id_2197f3_idx'),
        ),
        migrations.AddIndex(
            model_name='useroauthprovider',
            index=models.Index(fields=['provider', 'oauth_id'], name='user_oauth__provide_73576d_idx'),
        ),
        migrations.AlterUniqueTogether(
            name='useroauthprovider',
            unique_together={('provider', 'oauth_id'), ('user', 'provider')},
        ),
    ]
