// MVP Trip Planner - Database Schema
// Generated from spec.md v0.1 (TripItem Structure)

Table trips {
  id integer [pk, increment, note: 'Auto increment primary key']
  owner_type varchar(10) [not null, note: 'GUEST | USER']
  owner_id varchar(255) [null, note: 'USER인 경우 user id']
  title varchar(255) [not null]
  city varchar(255) [not null]
  
  // Start Location (embedded)
  start_lat decimal(10, 8) [not null]
  start_lng decimal(11, 8) [not null]
  
  // Trip Schedule (extended for frontend)
  start_date date [null, note: '여행 시작 날짜 (YYYY-MM-DD)']
  total_days integer [null, note: '여행 전체 일수']
  
  // Route Summary (embedded)
  total_duration_min integer [null, note: '총 이동 시간 (분)']
  total_distance_km decimal(10, 2) [null, note: '총 이동 거리 (km)']
  total_cost decimal(10, 2) [null, note: '전체 비용 (USD)']
  
  created timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  modified timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  expires_at timestamp [null, note: 'GUEST only - 7~14일 후']
  
  indexes {
    owner_id
    created
    expires_at
  }
}

// Note: TripItem inheritance pattern removed for simplicity
// Trip now directly contains Places and RouteSegments

// Place - 자식 테이블 (extended for frontend features)
Table places {
  id integer [pk, increment, note: 'Auto increment primary key']
  trip_id integer [not null, note: 'FK to trips']
  place_id varchar(255) [not null, note: 'Google Places ID']
  name varchar(255) [not null]
  lat decimal(10, 8) [not null]
  lng decimal(11, 8) [not null]
  address text [null, note: '주소']
  order decimal(10, 2) [not null, note: 'float for drag & drop']
  
  // Schedule fields (extended)
  day integer [null, note: '여행 Day (1-based)']
  visit_time varchar(5) [null, note: '방문 시간 (HH:MM)']
  duration_min integer [null, note: '머무는 시간 (분)']
  
  // Cost fields (extended)
  cost decimal(10, 2) [null, note: '비용']
  currency varchar(3) [null, note: '통화 (KRW, USD, JPY, etc.)']
  memo text [null, note: '사용자 메모']
  
  created timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  modified timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  
  indexes {
    trip_id
    (trip_id, order)
    place_id
  }
  
  Note: '방문 장소 정보'
}

// RouteSegment - 장소 간 이동 경로
Table route_segments {
  id integer [pk, increment, note: 'Auto increment primary key']
  trip_id integer [not null, note: 'FK to trips']
  from_place_id integer [not null, note: 'FK to places - 출발 장소']
  to_place_id integer [not null, note: 'FK to places - 도착 장소']
  
  // Route information
  travel_mode varchar(20) [not null, note: 'WALKING | TRANSIT | DRIVING | BICYCLING', default: 'DRIVING']
  duration_min integer [not null, note: '소요 시간 (분)']
  distance_km decimal(10, 2) [not null, note: '거리 (km)']
  polyline text [null, note: 'Encoded polyline']
  
  // Schedule field (extended)
  departure_time varchar(5) [null, note: '출발 시간 (HH:MM)']
  
  created timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  modified timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  
  indexes {
    trip_id
    from_place_id
    to_place_id
    (trip_id, from_place_id, to_place_id)
  }
  
  Note: '장소 간 이동 경로 정보'
}

// Note: Cost table removed - cost information is now embedded in places table
// Each place has cost, currency, and memo fields directly

// Route Cache - API 최적화용 (Route 테이블과는 별개)
Table route_cache {
  id integer [pk, increment, note: 'Auto increment primary key']
  from_place_id varchar(255) [not null, note: 'Google Places ID']
  to_place_id varchar(255) [not null, note: 'Google Places ID']
  duration_min integer [not null, note: '소요 시간 (분)']
  distance_km decimal(10, 2) [not null, note: '거리 (km)']
  polyline text [null, note: 'Encoded polyline']
  
  created timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  modified timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  expires_at timestamp [not null, note: '캐시 만료 시간']
  
  indexes {
    (from_place_id, to_place_id) [unique]
    expires_at
  }
  
  Note: 'Directions API 호출 최소화를 위한 캐싱 (routes 테이블과는 다른 용도)'
}

Table users {
  id integer [pk, increment, note: 'Auto increment primary key']
  email varchar(255) [unique, not null]
  name varchar(255)
  
  created timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  modified timestamp [not null, default: `now()`, note: 'TimeStampedModel']
  
  Note: 'v0.2에서 확장 예정 (MVP에서는 선택적)'
}

// Relationships
Ref: places.trip_id > trips.id [delete: cascade]
Ref: route_segments.trip_id > trips.id [delete: cascade]
Ref: route_segments.from_place_id > places.id [delete: cascade]
Ref: route_segments.to_place_id > places.id [delete: cascade]

// Enums (참고용)
// UserType: GUEST, USER
// TravelMode: WALKING, TRANSIT, DRIVING, BICYCLING
// Currency: KRW, USD, JPY, EUR, CNY, GBP, AUD, CAD, THB, VND

// Business Rules (애플리케이션 레벨)
// 1. Places per trip: recommended max 20 (유연하게 관리)
// 2. Guest trips: auto-expire after 7-14 days
// 3. order: float type for flexible drag & drop reordering
// 4. Duplicate place prevention: check by place_id per trip (unique_together)
// 5. RouteSegment.from_place_id와 to_place_id는 같은 trip의 place여야 함
// 6. Day는 1-based (1, 2, 3, ...)
// 7. visit_time과 departure_time은 HH:MM 포맷 (24시간)
